--- a/js/index.html
+++ b/js/index.html
@@ -8,17 +8,17 @@
   
   
   <!-- CSS file -->
-  <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
+  <link rel="stylesheet" type="text/css" href="../css/styles.css" media="all">
   
 </head>
 <body>
   
-<div id="map"></div>
+<div id="symbol_map"></div>
 
 <script type="text/javascript">
-
-  var spec2 = "js/map.vg.json";
-  vegaEmbed('#map', spec2).then(function(result) {
+  console.log("hello");
+  var spec2 = "map.vg.json";
+  vegaEmbed('#symbol_map', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
