--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 <body>
   
 <div id="symbol_map"></div>
+<div id="symbol_boxplot"></div>
 
 <script type="text/javascript">
-  console.log("hello");
-  var spec2 = "js/map.vg.json";
-  vegaEmbed('#symbol_map', spec2).then(function(result) {
+  var spec1 = "js/map.vg.json";
+  var spec2 = "js/box_plot.vg.json";
+  vegaEmbed('#symbol_map', spec1).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+  vegaEmbed('#symbol_boxplot', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
