--- a/index.html
+++ b/index.html
@@ -67,6 +67,37 @@
       </div>
     </div>
 
+    <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-2-3">
+        <div id="symbol_barchart" class="vis-container"></div>
+      </div>
+      <div class="pure-u-1-3">
+        <div class="description description-right">
+          <h2>Top Meteorite Types:</h2>
+          <p>With the populatiy of doomsday movies, it has led many to believe that meteorite landings
+            on Earth are rare occasions. Many people also believe that when a meteorite does land on
+            Earth, that it is going to be a huge Earth destroying meteorite. But is that really the
+            truth about meteorite landings?
+          </p>
+        </div>
+      </div>
+
+          <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-1-3">
+        <div class="description description-left">
+          <h2>Meteorite Weights</h2>
+          <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat
+            sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.</p>
+        </div>
+      </div>
+      <div class="pure-u-2-3">
+        <div id="symbol_linechart" class="vis-container"></div>
+      </div>
+    </div>
+
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
         <p>This visualisation is created by Dilakvin De Silva.</p>
@@ -78,10 +109,18 @@
   <script type="text/javascript">
     var spec1 = "js/map.vg.json";
     var spec2 = "js/box_plot.vg.json";
-    vegaEmbed('#symbol_map', spec1).then(function(result) {
+    var spec3 = "js/bar_chart.vg.json";
+    var spec4 = "js/line_chart.vg.json";
+    vegaEmbed('#symbol_map', spec1, {"actions": false}).then(function(result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
-    vegaEmbed('#symbol_boxplot', spec2).then(function(result) {
+    vegaEmbed('#symbol_boxplot', spec2, {"actions": false}).then(function(result) {
+      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+    }).catch(console.error);
+    vegaEmbed('#symbol_barchart', spec3, {"actions": false}).then(function(result) {
+      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+    }).catch(console.error);
+    vegaEmbed('#symbol_linechart', spec4, {"actions": false}).then(function(result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
   </script>
