page layout changes

--- a/index.html
+++ b/index.html
@@ -32,38 +32,25 @@
     <div class="pure-g">
       <div class="pure-u-1-1">
         <h1>Meteorite Landings from 2010 - 2012</h1>
-        <p>Using visualisations to break down misconceptions around meteorites</p>
+        <h2>Using visualisations to break down misconceptions around meteorites!</h2>
       </div>
     </div>
 
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-2-3">
-        <div id="symbol_map" class="vis-container"></div>
-      </div>
-      <div class="pure-u-1-3">
-        <div class="description description-right">
-          <h2>The Misconception!</h2>
-          <p>With the populatiy of doomsday movies, it has led many to believe that meteorite landings
-            on Earth are rare occasions. Many people also believe that when a meteorite does land on
-            Earth, that it is going to be a huge Earth destroying meteorite. But is that really the
-            truth about meteorite landings?
-          </p>
-        </div>
-      </div>
-
-    <!-- pure grid group -->
-    <div class="pure-g">
       <div class="pure-u-1-3">
         <div class="description description-left">
-          <h2>Meteorite Weights</h2>
-          <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat
-            sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.</p>
+          <h3>The Misconception!</h3>
+          <p2>With the populatiy of doomsday movies, it has led many to believe that meteorite landings
+            on Earth are rare occasions. Many people also believe that when a meteorite does land on
+            Earth, it is going to be a huge Earth destroying meteorite.</p2>
+            <br>
+            <br>
+          <p2><high>But is that really the truth about meteorite landings?</high></p2>
         </div>
       </div>
       <div class="pure-u-2-3">
-        <div id="symbol_boxplot" class="vis-container"></div>
+        <div id="symbol_map" class="vis-container"></div>
       </div>
     </div>
 
@@ -74,12 +61,16 @@
       </div>
       <div class="pure-u-1-3">
         <div class="description description-right">
-          <h2>Top Meteorite Types:</h2>
-          <p>With the populatiy of doomsday movies, it has led many to believe that meteorite landings
-            on Earth are rare occasions. Many people also believe that when a meteorite does land on
-            Earth, that it is going to be a huge Earth destroying meteorite. But is that really the
-            truth about meteorite landings?
-          </p>
+          <h3>Meteorite Types:</h3>
+          <p2><high>L4, L5, L6, H4, H5, H6, LL5 and LL6</high> are all types of <high>Ordinary Chondrites.</high> They a primarily
+            composed of silicate materials.
+            <br>
+            <br>
+            <high>CV3</high> is considered a <high>Carbonaceous Chondrite</high>. These are rich in carbon compounds.
+            <br>
+            <br>
+            Whilst <high>Eucrite-pmict</high> is an <high>Achondrite</high>. Composed of minerals formed from molten.
+          </p2>
         </div>
       </div>
 
@@ -87,20 +78,46 @@
     <div class="pure-g">
       <div class="pure-u-1-3">
         <div class="description description-left">
-          <h2>Meteorite Weights</h2>
-          <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat
-            sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.</p>
+          <h3>Meteorite Weights</h3>
+          <p2>Based off Figure 3 it can be seen that the majority spread of all these <high>meteorites</high> between 2010 - 2012 
+            (excluding the outliers) is <high>less than 1000g.</high>
+            <br>
+            <br>
+            These weights are a lot lighter than one might have expected and wouldn't be 
+            considered "Earth destroying".
+          </p2>
         </div>
       </div>
       <div class="pure-u-2-3">
-        <div id="symbol_linechart" class="vis-container"></div>
+        <div id="symbol_boxplot" class="vis-container"></div>
       </div>
     </div>
 
+    <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-2-3">
+        <div id="symbol_linechart" class="vis-container"></div>
+      </div>
+      <div class="pure-u-1-3">
+        <div class="description description-right">
+          <h3>Conclusion</h3>
+          <p2>These visualisations have shown that <high>meteorite landings aren't</high> as <high>rare or dangerous</high>
+            as you might have previously thought.
+            <br>
+            <br>
+            Figure 4. also clearly supports that <high>meteorite landings </high> aren't one off occassion but are in the <high>counts of 100s.</high>
+            <br>
+            <br>
+            Hopefully you have learnt something new today and aren't as scared of meteorites or the end of the world, but are excited
+            by <high>the story each meteorite tells about our universe.</high>
+          </p2>
+        </div>
+      </div>
+
+
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
-        <p>This visualisation is created by Dilakvin De Silva.</p>
+        <p2>This visualisation is created by Dilakvin De Silva.</p2>
       </div>
     </div>
 
