--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="pure-u-1-3">
         <div class="description description-left">
           <h3>The Misconception!</h3>
-          <p2>With the populatiy of doomsday movies, it has led many to believe that meteorite landings
+          <p2>With the popularity of doomsday movies, it has led many to believe that meteorite landings
             on Earth are rare occasions. Many people also believe that when a meteorite does land on
             Earth, it is going to be a huge Earth destroying meteorite.</p2>
             <br>
