--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
 
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
-        <p2>This visualisation is created by Dilakvin De Silva.</p2>
+        <p3><br><br>
+          This visualisation is created by <high>Dilakvin De Silva</high> and this work is under the <high>CC Attribution 4.0 International license.</high> (free to use provided credit is given)
+        </p3>
       </div>
     </div>
 
